<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity">
    <Button
        android:onClick="Back"
        android:background="@drawable/ic_keyboard_backspace_black_24dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        tools:ignore="OnClick" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">
        <EditText
            android:inputType="text"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/NameTextView"
            android:hint="@string/nameHint"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/AgeTextView"
            android:maxLines="1"
            android:inputType="number"
            android:hint="@string/ageHint"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/back_smoke_round"
            android:layout_margin="15dp">
            <EditText
                android:id="@+id/StateTextView"
                android:layout_width="match_parent"
                android:hint="@string/stateHint"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:inputType="textMultiLine"
                android:background="@android:color/transparent"/>
        </FrameLayout>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/back_smoke_top"
        android:layout_gravity="bottom"
        android:text="@string/save"
        android:onClick="Save"/>
</FrameLayout>