<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignActivity">
    <TabHost
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tabHost">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TabWidget
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tabs"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tabcontent">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tabSignIn"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/back_round_smoke_bot"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:inputType="text"
                        android:hint="@string/loginHint"
                        android:id="@+id/LoginTextView"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:inputType="textPassword"
                        android:hint="@string/passwordHint"
                        android:id="@+id/PasswordTextView"
                        />
                    <Button
                        android:paddingLeft="30dp"
                        android:paddingRight="30dp"
                        android:layout_gravity="center"
                        android:onClick="SignIn"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:text="@string/signIn"
                        android:background="@drawable/back_round_smoke"/>
            </LinearLayout>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/tabSignUp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="text"
                    android:hint="@string/loginHint"
                    android:id="@+id/NewLoginTextView"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:inputType="textPassword"
                    android:hint="@string/passwordHint"
                    android:id="@+id/NewPasswordTextView"
                    />
                <EditText
                    android:inputType="text"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/NewNameTextView"
                    android:hint="@string/nameHint"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/NewAgeTextView"
                    android:maxLines="1"
                    android:inputType="number"
                    android:hint="@string/ageHint"/>
                <EditText
                    android:id="@+id/NewStateTextView"
                    android:layout_width="match_parent"
                    android:hint="@string/stateHint"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="text"/>
                <Button
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:layout_gravity="center"
                    android:onClick="SignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/goSignUp"
                    android:background="@drawable/back_round_smoke"/>
            </LinearLayout>
        </FrameLayout>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>
        </LinearLayout>
    </TabHost>

</FrameLayout>